added class notes for 7/28

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <div id="mainSection">
 
     </div>
+    <div id="anotherDiv"> 
+        has some other stuff    
+    </div>
+    <div id= "nestedDiv">
+         nested div
+    </div>
     <!-- Lets load our js so we can customize our elements -->
     <script src="./app.js"></script>
   </body>
